<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/entryGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kalkulator BMI"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/enterHeight"
        android:layout_width="242dp"
        android:layout_height="56dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="Podaj wzrost"
        app:layout_constraintBottom_toTopOf="@+id/enterWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryGreeting" />

    <EditText
        android:id="@+id/enterWeight"
        android:layout_width="249dp"
        android:layout_height="62dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="Podaj masę"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterHeight" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="148dp"
        android:text="Oblicz BMI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="251dp"
        android:layout_height="83dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="172dp"
        android:text=" "
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>